# ESP32testes

BluFi/: CMakeLists.txt  partitions.csv  sdkconfig
BluFi/main/: CMakeLists.txt  blufi_example_main.c  ota_json.c  ota_json.h
BluFi/server_certs/: ca_cert.pem
BluFiOTA/: CMakeLists.txt  sdkconfig  sdkconfig.ci  sdkconfig.defaults  sdkconfig.old
BluFiOTA/main/: CMakeLists.txt  blufi_bibl.h  blufi_init.c  blufi_main.c  blufi_main.h  blufi_security.c  main.c  ota_json.c
BlueOTA/: CMakeLists.txt  sdkconfig  sdkconfig.ci.flash_enc_wifi  sdkconfig.old
BlueOTA/main/: CMakeLists.txt  bluetooth.c  bluetooth.h  blufi_example_main.c  blufi_example_main.h  main.c  ota_json.c  wifi.c  wifi.h
BlueToothTest/: CMakeLists.txt
BlueToothTest/main/: main.c
ModBus/: CMakeLists.txt  sdkconfig  sdkconfig.old
ModBus/main/: master.c  master2.c
UARTEST/: CMakeLists.txt  sdkconfig.old
bluetooth_test/: CMakeLists.txt
bluetooth_test/main/: main3.c  main4.c
modbus2/: CMakeLists.txt  sdkconfig  sdkconfig.old
modbus2/main/: master2.c
ota-testes/: CMakeLists.txt  sdkconfig
ota-testes/main/: CMakeLists.txt  advanced_ota_example.c  ota_json.c  wifi_functions.h
